--- a/app/flex/WeFootball.mxml
+++ b/app/flex/WeFootball.mxml
@@ -3,30 +3,20 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:wfom="com.wefootball.components.*"
 	xmlns:accom="com.wefootball.components.account.*"
-	backgroundGradientColors="[#A1DAED, #ffffff]"
-	horizontalAlign="center"
-	verticalAlign="top"
-	width="100%"
-	height="100%"
-	paddingBottom="0"
-	paddingLeft="0"
-	paddingRight="0"
-	paddingTop="0">
-<mx:Script>
-<![CDATA[
-	import com.wefootball.events.RegisterEvent;
-	import com.wefootball.events.LoginEvent;
-	
-	private function handleLogin(e:LoginEvent):void {
-		showMain();
-	}
-	private function showMain():void {
-		mainStack.selectedChild = mainBox;
-	}
-]]>
-</mx:Script>
+>
+	<mx:Style source="stylesheets/Style.css"/>
+	<mx:Script>
+	<![CDATA[
+		import com.wefootball.events.RegisterEvent;
+		import com.wefootball.events.LoginEvent;
+		
+		private function login(e:LoginEvent):void {
+			mainStack.selectedChild = mainBox;
+		}
+	]]>
+	</mx:Script>
 	<mx:ViewStack id="mainStack" width="100%" height="100%">
-		<accom:AccountBox login="showMain()" />
-		<wfom:MainBox id="mainBox" />
+		<accom:AccountBox login="login(event)" verticalAlign="middle" horizontalAlign="center"/>
+		<wfom:MainBox id="mainBox" verticalAlign="middle" horizontalAlign="center"/>
 	</mx:ViewStack>
 </mx:Application>
