--- a/app/flex/com/wefootball/components/MainBox.mxml
+++ b/app/flex/com/wefootball/components/MainBox.mxml
@@ -1,80 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml"
+<mx:VBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:msg="com.wefootball.components.message.*" xmlns:acc="com.wefootball.components.account.*"
-	width="100%" height="100%" creationComplete="init()">
+	height="100%" 
+	paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20"
+	creationComplete="init()">
 <mx:Script>
 <![CDATA[
+	import mx.core.IFlexDisplayObject;
+	import com.wefootball.model.Message;
 	import com.wefootball.events.*;
 	import mx.controls.Alert;
 	import com.wefootball.model.User;
+	import com.wefootball.components.message.MessageSendBox;
+	import com.wefootball.components.account.UpdateBox;
 	import mx.managers.PopUpManager;
 	
+	private var messageSendBox:MessageSendBox = new MessageSendBox;
+	private var settingWindow:UpdateBox = new UpdateBox;
+	
  	private function init():void
-	{
-		this.removeChild(settingWindow);
-		this.removeChild(messageDetailWindow);
-		this.removeChild(messageSendWindow);
-		PopUpManager.addPopUp(settingWindow,this,false);
-		PopUpManager.addPopUp(messageDetailWindow,this,false);
-		PopUpManager.addPopUp(messageSendWindow,this,false);
-		PopUpManager.centerPopUp(settingWindow);
-		PopUpManager.centerPopUp(messageDetailWindow);
-		PopUpManager.centerPopUp(messageSendWindow);
+	{	
+		initPopupWindow(messageSendBox)
+		initPopupWindow(settingWindow)	
+	}
+	private function initPopupWindow(dis:IFlexDisplayObject):void {
+		PopUpManager.addPopUp(dis, this);
+		PopUpManager.centerPopUp(dis);
+		dis.visible = false;
 	}
 	
 	private function sendMessage(m:MessageDetailEvent):void {
-		messageSendWindow.visible=true;
+		messageSendBox.visible=true;
 		messageSendBox.message = m.message;
 	}
-	
-	private function displayMessage(m:MessageDetailEvent):void {
-		messageDetailWindow.visible=true;
-		messageDetailBox.messageId = m.message.id;
-	}
-	private function displayUser(u:UserDisplayEvent):void {
-		informationBox.visible=true;
+	private function userDisplay(u:UserDisplayEvent):void {
 		informationBox.userId = u.user_id;
-	}
-	
-	private function pouUpMySetting():void
-	{
-		settingWindow.visible = true;
+		mainStack.selectedChild = userPage;
 	}
 ]]>
 </mx:Script>
-	<mx:TitleWindow id="settingWindow" title="{User.currentUser.nickname}的设置" visible="false"
-		 showCloseButton="true" close="event.target.visible=false" borderColor="#A1DAED"  borderAlpha="1" width="414" horizontalCenter="-172" verticalCenter="-85">
-		<acc:UpdateBox id="UpdateBox" user="{User.currentUser}"/>
-	</mx:TitleWindow>
-	
-	<mx:TitleWindow id="messageDetailWindow" title="" visible="false"
-		 showCloseButton="true" close="event.target.visible=false" borderColor="#A1DAED"  borderAlpha="1">
-		<msg:MessageDetailBox id="messageDetailBox" 
-			messageReply="messageDetailWindow.visible=false;sendMessage(event)"/>
-	</mx:TitleWindow>
-	
-	<mx:TitleWindow id="messageSendWindow" title="" visible="false"
-		 showCloseButton="true" close="event.target.visible=false" borderColor="#A1DAED"  borderAlpha="1">
-		<msg:MessageSendBox id="messageSendBox" 
-			messageSendCompleted="messageSendWindow.visible=false;"/>
-	</mx:TitleWindow>
-	
-	<mx:VBox width="100%" height="100%">
-		<mx:HBox height="100" width="100%" verticalAlign="bottom" horizontalAlign="right">
-			<mx:LinkButton label="{User.currentUser.nickname}的设置" click="pouUpMySetting()"/>
-		</mx:HBox>
-	
-		<mx:HBox width="100%" height="550">
-			<mx:VBox width="100" height="100%">
-				<mx:Button label="信箱" width="100" height="100"/>
+	<mx:HBox height="100%" >
+		<mx:ApplicationControlBar width="200" height="100%" 
+			paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20" >
+			<mx:VBox height="100%" width="100%" >
+				<mx:LinkButton label="我的信息" click="informationBox.user=User.currentUser;mainStack.selectedChild = userPage"/>
+				<mx:LinkButton label="我的信箱" click="mainStack.selectedChild = myMessageBox"/>
+				<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>
 			</mx:VBox>
-			<mx:VBox width="100%" height="100%">
-				<msg:MessageListBox id="messageListBox" backgroundColor="#FFFFFF"
-					 userDisplay="displayUser(event)"
-					 messageDisplay="displayMessage(event)"/>
-				<acc:InformationBox id="informationBox" backgroundColor="#FFFFFF" 
-					messageSend="sendMessage(event)"/>
-			</mx:VBox>
-		</mx:HBox>
-	</mx:VBox>
-</mx:Canvas>
+		</mx:ApplicationControlBar>
+		<mx:ApplicationControlBar width="700" height="100%">
+			<mx:ViewStack id="mainStack" width="100%" height="100%">
+				<mx:VBox width="100%" height="100%" id="userPage"
+					paddingLeft="20" paddingRight="20" paddingBottom="20" >
+					<mx:Label text="个人信息" styleName="head"/>
+					<acc:InformationBox height="100%" messageSend="sendMessage(event)" id="informationBox" user="{User.currentUser}"/>
+				</mx:VBox>
+				<mx:VBox width="100%" height="100%" id="myMessageBox"
+					paddingLeft="20" paddingRight="20" paddingBottom="20" >
+					<mx:Label text="我的信箱" styleName="head"/>
+					<msg:MessageBox height="100%" messageReply="sendMessage(event)" userDisplay="userDisplay(event)"/>
+				</mx:VBox>
+			</mx:ViewStack>
+		</mx:ApplicationControlBar>
+	</mx:HBox>
+</mx:VBox>
