--- a/app/flex/com/wefootball/components/account/LoginBox.mxml
+++ b/app/flex/com/wefootball/components/account/LoginBox.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%"
-	height="100%" label="Login">
+	height="100%" label="登陆">
 	
 <mx:Metadata>
 	[Event(name="login", type="com.wefootball.events.LoginEvent")]
@@ -23,22 +23,22 @@
 	}
 	
 	private function handleFault(event:FaultEvent):void {
-		Alert.show("The E-mail or Password is wrong.", "Login Error")
+		Alert.show("用户名不存在或者密码错误", "登录失败")
 	}
 ]]>
 </mx:Script>
 	
 	<mx:Form labelWidth="150">
-		<mx:FormItem label="Email Address">
+		<mx:FormItem label="你的email地址">
 			<mx:TextInput id="loginTI" text="csdt@csdt.com"/>
 		</mx:FormItem>
-		<mx:FormItem label="Password">
+		<mx:FormItem label="密码">
 			<mx:TextInput id="passwordTI" text="csdtcsdt"
 			displayAsPassword="true"/>
 		</mx:FormItem>
 		<mx:FormItem>
 			<mx:Button id="loginButton" 
-				label="Login" 
+				label="登陆" 
 				click="login();"/>
 		</mx:FormItem>
 	</mx:Form>
