--- a/app/flex/com/wefootball/components/MainBox.mxml
+++ b/app/flex/com/wefootball/components/MainBox.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml"
+<mx:HBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:msg="com.wefootball.components.message.*" xmlns:acc="com.wefootball.components.account.*"
 	height="100%" 
 	paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20"
@@ -39,7 +39,6 @@
 	}
 ]]>
 </mx:Script>
-	<mx:HBox height="100%" >
 		<mx:ApplicationControlBar width="200" height="100%" 
 			paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20" >
 			<mx:VBox height="100%" width="100%" >
@@ -48,7 +47,7 @@
 				<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>
 			</mx:VBox>
 		</mx:ApplicationControlBar>
-		<mx:ApplicationControlBar width="700" height="100%">
+		<mx:ApplicationControlBar width="700" height="100%" paddingTop="20" paddingBottom="20" >
 			<mx:ViewStack id="mainStack" width="100%" height="100%">
 				<mx:VBox width="100%" height="100%" id="userPage"
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
@@ -62,5 +61,4 @@
 				</mx:VBox>
 			</mx:ViewStack>
 		</mx:ApplicationControlBar>
-	</mx:HBox>
-</mx:VBox>
+</mx:HBox>
