--- a/app/flex/com/wefootball/components/account/InformationBox.mxml
+++ b/app/flex/com/wefootball/components/account/InformationBox.mxml
@@ -57,7 +57,7 @@
 		]]>
 	</mx:Script>
 	
-	<mx:Form labelWidth="100" width="600">
+	<mx:Form labelWidth="100" width="100%">
 		<mx:FormItem label="昵称" >
 			<mx:Label text="{user.nickname}"/>
 		</mx:FormItem>
@@ -85,7 +85,7 @@
 			</mx:TileList>
 	    </mx:FormItem>
 	    <mx:FormItem label="个人简介" >
-	   	   	<mx:Text text="{user.summary}" width="285" height="100"/>   
+	   	   	<mx:Text text="{user.summary}" width="100%" height="50%"/>   
 	    </mx:FormItem>
 	    <mx:FormItem direction="horizontal">
 	    	<mx:Button label="发信" click="sendMessage()" visible="{user.id != User.currentUser.id}"/>
