--- a/app/flex/com/wefootball/components/message/MessageDetailBox.mxml
+++ b/app/flex/com/wefootball/components/message/MessageDetailBox.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" >
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#FFFDFD">
 <mx:Metadata>
 	[Event(name="messageReply", type="com.wefootball.events.MessageDetailEvent")]
 </mx:Metadata>
@@ -49,8 +49,8 @@
 	 	}
 	]]>
 </mx:Script>
-	<mx:VBox styleName="content" width="100%" height="100%">	
-		<mx:Form visible="{message!=null}">
+<!--	<mx:VBox styleName="content" width="100%" height="100%">-->
+		<mx:Form visible="{message!=null}" backgroundAlpha="0.0">
 			<mx:FormItem label="来自" >
 				<mx:Label text="{message.sender_nick}" />
 			</mx:FormItem>
@@ -61,7 +61,7 @@
 				<mx:Label text="{message.subject}"/>
 			</mx:FormItem>
 			<mx:FormItem >
-				<mx:TextArea text="{message.content}" height="100" editable="false" borderThickness="0" />
+				<mx:Text text="{message.content}"/>
 			</mx:FormItem>
 			<mx:FormItem direction="horizontal">
 				<mx:Button label="删除" 
@@ -74,6 +74,5 @@
 					creationComplete="event.target.visible = false" />
 			</mx:FormItem>
 		</mx:Form>
-		
-	</mx:VBox>
+<!--	</mx:VBox>-->
 </mx:Canvas>
