--- a/app/flex/com/wefootball/components/MainBox.mxml
+++ b/app/flex/com/wefootball/components/MainBox.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:HBox xmlns="*" xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:msg="com.wefootball.components.message.*" xmlns:acc="com.wefootball.components.account.*"
+	xmlns:tm="com.wefootball.components.team.*"
 	height="100%" 
 	paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20"
 	creationComplete="init()">
@@ -13,6 +14,7 @@
 	import com.wefootball.model.User;
 	import com.wefootball.components.message.MessageSendBox;
 	import com.wefootball.components.account.UpdateBox;
+	import com.wefootball.components.team.TeamBox;
 	import mx.managers.PopUpManager;
 	
 	private var messageSendBox:MessageSendBox = new MessageSendBox;
@@ -43,6 +45,7 @@
 			paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20" >
 			<mx:VBox height="100%" width="100%" >
 				<mx:LinkButton label="我的信息" click="informationBox.user=User.currentUser;mainStack.selectedChild = userPage"/>
+				<mx:LinkButton label="我的球队" click="mainStack.selectedChild = myTeam"/>
 				<mx:LinkButton label="我的信箱" click="mainStack.selectedChild = myMessageBox"/>
 				<mx:LinkButton label="我的设置" click="settingWindow.visible = true;"/>
 			</mx:VBox>
@@ -58,6 +61,11 @@
 					paddingLeft="20" paddingRight="20" paddingBottom="20" >
 					<mx:Label text="我的信箱" styleName="head"/>
 					<msg:MessageBox height="100%" messageReply="sendMessage(event)" userDisplay="userDisplay(event)"/>
+				</mx:VBox>
+				<mx:VBox width="100%" height="100%" id="myTeam"
+					paddingLeft="20" paddingRight="20" paddingBottom="20" >
+					<mx:Label text="我的球队" styleName="head"/>
+					<tm:TeamBox height="100%"/>
 				</mx:VBox>
 			</mx:ViewStack>
 		</mx:ApplicationControlBar>
