--- a/app/flex/com/wefootball/components/message/MessageListBox.mxml
+++ b/app/flex/com/wefootball/components/message/MessageListBox.mxml
@@ -38,8 +38,8 @@
      			dispatchEvent(e);
      		}
      		internal function displayUser(m:Object):void{
-     			if (sendBox) dispatchEvent(new UserDisplayEvent(m.receiver_id));
-     			else dispatchEvent(new UserDisplayEvent(m.sender_id));
+     			if (sendBox) dispatchEvent(new UserDisplayEvent("userDisplay", m.receiver_id));
+     			else dispatchEvent(new UserDisplayEvent("userDisplay", m.sender_id));
      		}	
      		internal function unreadStyle(m:Object):String {
      			if(!m.is_receiver_read && m.receiver_id == User.currentUser.id) return 'em';
